--- a/config/suricata.yaml
+++ b/config/suricata.yaml
@@ -1,3 +1,8 @@
+af-packet:
+  - interface: eth0
+    # ...existing code...
+    snaplen: 0
+    # ...existing code...
 # ...existing code...
 rule-files:
   - suricata.rules
